--- a/src/features/header/Header.css
+++ b/src/features/header/Header.css
@@ -19,32 +19,6 @@ header .logo{
 header .logo img{
     object-fit: cover;
 }
-header .searchBar{
-    width: 40%;
-    padding: 0.75rem 1rem;
-    border-radius: 2rem;
-    background-color:#f0f0f0;
-    display: flex;
-}
-header .searchBar:hover, .searchBar:focus-within{
-    border: 1px solid rgb(4, 88, 199);
-    background-color: #FFF;
-}
-header .searchBar button,input{
-    background-color: transparent;
-    border: 0;
-    color: #b9b9b9;
-}
-header .searchBar input{
-    width: -webkit-fill-available;
-    color: #000;
-}
-header .searchBar input:focus{
-    outline: none;
-}
-header .searchBar input::-webkit-search-cancel-button{
-    cursor: pointer;
-}
 header .functionnalities{
     width: 30%;
     display: flex;
@@ -83,7 +57,7 @@ header .functionnalities>div.parameters:hover{
 header .functionnalities>div.parameters ul{
     background-color: #FFF;
     width: 200%;
-    display: grid;
+    display: none;
     padding: 1rem;
     grid-template-columns: 1fr 5fr;
     font-size: 1.25rem;
