--- a/src/features/header/Header.css
+++ b/src/features/header/Header.css
@@ -12,6 +12,7 @@ header {
     position: fixed;
     top: 0;
     box-shadow: 10px 5px 5px rgba(75, 75, 75, 0.295);
+    z-index: 100;
 }
 header .logo{
     width: 6%;
